<resources>
    <string name="app_name">FRemote</string>
    <string name="title_activity_sign_in">Sign in</string>
    <string name="continue_with">Continue with</string>
    <string name="control_your_home_anywhere">Control your home anywhere</string>
    <string name="home">Home</string>
    <string name="devices">Devices</string>
    <string name="add_device">Add device</string>
    <string name="create_new_scene">Create new scene</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="device_name_optional">Device name (optional)</string>
    <string name="device_pin_required">Device pin (required)</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="scene_name_required">Scene name (requried)</string>
    <string name="description">Description</string>
    <string name="enter_device_pin">Enter device PIN</string>
    <string name="enter_name">Enter name</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="server_mode">Server mode</string>
    <string name="log_out">Log out</string>
    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>
    <string name="turn_on">Turn on</string>
    <string name="turn_off">Turn off</string>
    <string name="not_available">-:-</string>
    <string name="temperature">Temperature</string>
    <string name="humidity">Humidity</string>
    <string name="apply_scene">Apply scene</string>
    <string name="enter_command">Enter command</string>
    <string name="send">Send</string>
    <string name="select_device">Select bluetooth device</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>

    <string name="light">Light</string>
    <string name="fan">Fan</string>
    <string name="icon">Icon</string>
</resources>
